# crewia_fraud_analysis

./: README.md  fraud_log.out  fraud_report.md  pyproject.toml  test_api.py  test_firestore_tool.py  test_hello.py  test_user.py
scripts/: get_chat_id.py  test_telegram.py
src/: chat_log.out  inspect_firestore.py  test_hello.py  test_user_search.py
src/crewai_fraud_analysis/: crew.py  main.py
src/crewai_fraud_analysis/config/: agents.yaml  tasks.yaml
src/crewai_fraud_analysis/tools/: firestore_tool.py  user_search_tool.py
src/crewai_fraud_analysis/utils/: telegram_chat.py  telegram_notifier.py
